docs: 修正 swagger 文件，新增 summary api 描述
